--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
                 <li><a href="javascript:void(0);">关于</a></li>
             </ul>
             <ul class="icon">
-                <li><a href="https://github.com/Niefee"></a></li>
-                <li><a href="https://twitter.com/?lang=zh-cn"></a></li>
-                <li><a href="http://weibo.com/itfor/home"></a></li>
-                <li><a href="http://www.zhihu.com/people/hu-cai"></a></li>
-                <li><a href="mailto:ppitfor@gmail.com?subject=很高兴认识你，&body=你好，我是..."></a></li>
+                <li><a target="_blank" href="https://github.com/Niefee"></a></li>
+                <li><a target="_blank" href="https://twitter.com/?lang=zh-cn"></a></li>
+                <li><a target="_blank" href="http://weibo.com/itfor/home"></a></li>
+                <li><a target="_blank" href="http://www.zhihu.com/people/hu-cai"></a></li>
+                <li><a target="_blank" href="mailto:ppitfor@gmail.com?subject=很高兴认识你，&body=你好，我是..."></a></li>
             </ul>
         </div>
     </div>
